fix: changed text alignment on mobile devices

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -96,3 +96,7 @@
 		transform-origin: 50% 50%;
 	}
 }
+
+.gradient-text {
+	@apply text-transparent bg-clip-text bg-gradient-to-r from-accent-300 to-red-200;
+}
